--- a/bootstrap/templates/home.html
+++ b/bootstrap/templates/home.html
@@ -3,20 +3,12 @@
     <head>
         <title>Bootstrap Tutorial</title>
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='bootstrap.css') }}">
-
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
     </head>
-    <body>
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-6" style="background: red;">
-                    <p>Hi</p>
-                </div>
 
-                <div class="col-sm-6" style="background: pink;">
-                    <p>Hi</p>
-                </div>
-            </div>
+    <body>
+        <div class="container" style="background-color: red">
+
         </div>
 
         <script src="{{ url_for('static', filename='jquery.js') }}"></script>
